--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Επωνυμία Εταιρείας | Επίσημη Ιστοσελίδα</title>
-    <meta name="description" content="Επίσημη ιστοσελίδα της εταιρείας [ΕΠΩΝΥΜΙΑ].">
+    <title>POSE ADVERTISING | Επίσημη Ιστοσελίδα</title>
+    <meta name="description" content="Επίσημη ιστοσελίδα της εταιρείας POSE ADVERTISING I.K.E.">
     
     <style>
         /* Reset & Base Styles */
@@ -37,13 +37,13 @@
 <body>
 
     <header>
-        <h1 id="company-name">[ΠΛΗΡΗΣ ΕΠΩΝΥΜΙΑ ΕΤΑΙΡΕΙΑΣ]</h1>
-        <p>[ΔΙΑΚΡΙΤΙΚΟΣ ΤΙΤΛΟΣ]</p> </header>
+        <h1 id="company-name">POSE ADVERTISING I.K.E.</h1>
+        <p>POSE ADVERTISING</p> </header>
 
     <main>
         <h2>Καλώς ήρθατε</h2>
         <p>
-            Η εταιρεία μας δραστηριοποιείται στον χώρο [ΚΛΑΔΟΣ/ΔΡΑΣΤΗΡΙΟΤΗΤΑ] με συνέπεια και επαγγελματισμό.
+            Η εταιρεία μας δραστηριοποιείται στον χώρο των υπηρεσιών διαφήμισης με συνέπεια και επαγγελματισμό.
             Βρισκόμαστε στη διάθεσή σας για την άμεση εξυπηρέτησή σας.
         </p>
     </main>
@@ -56,19 +56,19 @@
             <ul class="legal-info">
                 <li>
                     <span class="legal-label">Επωνυμία:</span> 
-                    <span class="legal-value" id="legal-name">[ΠΛΗΡΗΣ ΕΠΩΝΥΜΙΑ]</span>
+                    <span class="legal-value" id="legal-name">POSE ADVERTISING I.K.E.</span>
                 </li>
                 <li>
                     <span class="legal-label">Διακριτικός Τίτλος:</span> 
-                    <span class="legal-value">[ΤΙΤΛΟΣ]</span>
+                    <span class="legal-value">POSE ADVERTISING</span>
                 </li>
                 <li>
                     <span class="legal-label">Έδρα:</span> 
-                    <span class="legal-value">[Οδός, Αριθμός, ΤΚ, Πόλη]</span>
+                    <span class="legal-value">ΠΥΘΕΟΥ 88 11743 ΑΘΗΝΑΙΩΝ</span>
                 </li>
                 <li>
                     <span class="legal-label">Τηλέφωνο:</span> 
-                    <span class="legal-value">[210xxxxxxx]</span>
+                    <span class="legal-value">2109966322</span>
                 </li>
                 <li>
                     <span class="legal-label">Email:</span> 
@@ -77,48 +77,43 @@
 
                 <li>
                     <span class="legal-label">ΑΦΜ:</span> 
-                    <span class="legal-value">[000000000]</span>
+                    <span class="legal-value">801005044</span>
                 </li>
                 <li>
                     <span class="legal-label">ΔΟΥ:</span> 
-                    <span class="legal-value">[π.χ. Α' Αθηνών]</span>
+                    <span class="legal-value">ΙΖ' ΑΘΗΝΩΝ (ΙΖ',ΙΗ' ΑΘΗΝΩΝ)</span>
                 </li>
                 <li>
                     <span class="legal-label">Αρ. ΓΕΜΗ:</span> 
-                    <span class="legal-value">[000000000000]</span>
-                </li>
-                <li>
-                    <span class="legal-label">Αρ. Μητρώου Επιμελητηρίου:</span> 
-                    <span class="legal-value">[Αριθμός]</span>
+                    <span class="legal-value">146778207000</span>
                 </li>
 
                 <li>
                     <span class="legal-label">Εταιρικό Κεφάλαιο:</span> 
-                    <span class="legal-value">[π.χ. 10.000,00€]</span>
+                    <span class="legal-value">5.000,00€</span>
                 </li>
                 <li>
                     <span class="legal-label">Εγγυητικές Εισφορές:</span> 
-                    <span class="legal-value">[Ποσό ή "Δεν υπάρχουν"]</span>
+                    <span class="legal-value">Δεν υπάρχουν</span>
                 </li>
 
                 <li class="full-width">
                     <span class="legal-label">Δραστηριότητες (ΚΑΔ):</span> 
                     <span class="legal-value">
-                        <strong>Κύρια:</strong> [Κωδικός - Περιγραφή]<br>
-                        <strong>Δευτερεύουσες:</strong> [Κωδικός - Περιγραφή]
+                        <strong>Κύρια:</strong> 73111100 - ΥΠΗΡΕΣΙΕΣ ΠΛΗΡΟΥΣ ΔΙΑΦΗΜΙΣΗΣ
                     </span>
                 </li>
 
                 <li class="full-width">
                     <span class="legal-label">Διαχειριστής:</span> 
-                    <span class="legal-value">[Ονοματεπώνυμο]</span>
+                    <span class="legal-value">ΠΟΛΥΧΡΟΝΗΣ ΣΕΪΤΑΝΙΔΗΣ, ΧΑΡΑΛΑΜΠΟΣ</span>
                 </li>
                 
                 <li class="full-width">
                     <span class="legal-label">Εταίροι:</span> 
                     <span class="legal-value">
-                        1. <strong>[Ονοματεπώνυμο]</strong> - Διεύθυνση: [Οδός, Αριθμός, Περιοχή] - Εισφορές: [Κατηγορία]<br>
-                        2. <strong>[Ονοματεπώνυμο]</strong> - Διεύθυνση: [Οδός, Αριθμός, Περιοχή] - Εισφορές: [Κατηγορία]
+                        1. <strong>ΠΟΛΥΧΡΟΝΗΣ ΣΕΪΤΑΝΙΔΗΣ, ΧΑΡΑΛΑΜΠΟΣ</strong> - Διεύθυνση: ΛΕΥΚΙΠΠΟΥ 5 ΑΘΗΝΑ - Εισφορές: 100 Χ (98%)<br>
+                        2. <strong>ΜΙΧΑΗΛ ΓΚΛΙΑΤΗΣ, ΕΛΕΥΘΕΡΙΟΣ</strong> - Διεύθυνση: ΛΕΥΚΙΠΠΟΥ 5 ΑΘΗΝΑ - Εισφορές: 100 Χ (2%)
                     </span>
                 </li>
             </ul>
