--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </li>
                 <li>
                     <span class="legal-label">Email:</span> 
-                    <span class="legal-value">[info@company.gr]</span>
+                    <span class="legal-value">polseit@windowslive.com</span>
                 </li>
 
                 <li>
